--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,111 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@INPROCEEDINGS{Autenrieb2023-st,
+author      = {Johannes Autenrieb},
+title       = {Data fusion-based Incremental Nonlinear Model Following Control Design for a Hypersonic Waverider Configuration},
+booktitle   = {AIAA SCITECH 2023 Forum},
+year        = {2023},
+month       = {jan},
+chapter     = {},
+pages       = {},
+doi         = {10.2514/6.2023-1997},
+URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
+eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
+preview     = {SciTech_2023.png}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@INPROCEEDINGS{Autenrieb2023-cd,
+  author      = {Autenrieb, Johannes and Annaswamy, Anuradha},
+  booktitle   = {2023 62nd IEEE Conference on Decision and Control (CDC)}, 
+  title       = {Safe and Stable Adaptive Control for a Class of Dynamic Systems}, 
+  year        = {2023},
+  month       = {dec},
+  volume      = {},
+  number      = {},
+  pages       = {5059-5066},
+  keywords    = {Damping;Missiles;Uncertainty;Stability analysis;Real-time systems;Safety;Quadratic programming},
+  doi         = {10.1109/CDC49753.2023.10383779},
+  eprint      = {https://ieeexplore.ieee.org/document/10383779},
+  preview     = {CDC_2023.gif}
+  }
+
+  @ARTICLE{Autenrieb2023-sj,
+  title     = {Flight control design for a hypersonic waverider configuration: A
+               non-linear model following control approach},
+  author    = {Autenrieb, Johannes and Fezans, Nicolas},
+  journal   = {CEAS Space Journal},
+  publisher = {Springer Science and Business Media LLC},
+  pages     = {1--24},
+  month     = {apr},
+  year      = {2024},
+  doi       = {10.1007/s12567-024-00544-0},
+  eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
+  preview   = {CEAS_Space_2024.png}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@INPROCEEDINGS{Autenrieb2021-da,
+  title       = {Towards a {C}ontrol-{C}entric {M}odelling and
+                 {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
+  author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
+  booktitle   = {German Aeronautics and Space Congress (DLRK)},
+  institution = {DGLR},
+  address     = {Bremen, Germany},
+  month       = {sep},
+  year        = {2021},
+  eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
+  preview     = {DLRK_2021.png}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@Incollection{CEAS-GNC-2022-035,
+    authors   = {Autenrieb, Johannes and Fezans, Nicolas},
+    title     = {Nonlinear Model Following Control Design for a Hypersonic Waverider Configuration},
+    booktitle = {Proceedings of the 2022 {CEAS EuroGNC} conference},
+    address   = {Berlin, Germany},
+    month     = {may},
+    year      = {2022},
+    note      = {CEAS-GNC-2022-035},
+    eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
+    preview   ={EuroGNC_2022.png}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{inproceedings,
+author = {Kiehn, Daniel and Autenrieb, Johannes and Fezans, Nicolas},
+year = {2022},
+month = {sep},
+pages = {},
+title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
+eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
+preview   ={ICAS_2022.png}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
+@INPROCEEDINGS{Autenrieb2019-re1,
+  author={Autenrieb, Johannes and Shin, Hyo-Sang and Bacic, Marko},
+  booktitle={2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
+  title={Development of a Neural Network-based Adaptive Nonlinear Dynamic Inversion Controller for a Tilt-wing VTOL Aircraft}, 
+  year={2019},
+  month={nov},
+  volume={},
+  number={},
+  pages={44-52},
+  keywords={},
+  doi={10.1109/REDUAS47371.2019.8999700},
+  eprint    = {https://ieeexplore.ieee.org/document/8999708},
+  preview   ={RED_UAS_2019_1.png}
+  }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
+  @INPROCEEDINGS{Autenrieb2019-re2,
+  author      ={Autenrieb, Johannes and Strawa, Natalia and Shin, Hyo-Sang and Hong, Ju-Hyeon},
+  booktitle   = {2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
+  title       ={A Mission Planning and Task Allocation Framework For Multi-UAV Swarm Coordination}, 
+  year        ={2019},
+  month       = {dec},
+  volume      ={nov},
+  number      ={},
+  pages       ={297-304},
+  keywords    ={},
+  doi         ={10.1109/REDUAS47371.2019.8999708},
+  eprint      = {https://ieeexplore.ieee.org/document/8999708},
+  preview     ={RED_UAS_2019_2.png},
+  additional_info={. *Code and more information* can be [found here](https://github.com/JohannesAutenrieb/mission_planning)}
+  }
