--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,7 +32,7 @@ preview     = {SciTech_2023.png}
   preview     = {CDC_2023.gif}
   }
 
-  @ARTICLE{Autenrieb2023-sj,
+  @article{Autenrieb2023-sj,
   title     = {Flight control design for a hypersonic waverider configuration: A
                non-linear model following control approach},
   author    = {Autenrieb, Johannes and Fezans, Nicolas},
@@ -46,7 +46,7 @@ preview     = {SciTech_2023.png}
   preview   = {CEAS_Space_2024.png}
 }
 
-@INPROCEEDINGS{Autenrieb2021-da,
+@inproceedings{Autenrieb2021-da,
   title       = {Towards a {C}ontrol-{C}entric {M}odelling and
                  {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
   author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
@@ -59,9 +59,9 @@ preview     = {SciTech_2023.png}
   preview     = {DLRK_2021.png}
 }
 
-@Incollection{CEAS-GNC-2022-035,
-    authors   = {Autenrieb, Johannes and Fezans, Nicolas},
+@inproceedings{CEAS-GNC-2022-035,
     title     = {Nonlinear Model Following Control Design for a Hypersonic Waverider Configuration},
+    author    = {Autenrieb, Johannes and Fezans, Nicolas},
     booktitle = {Proceedings of the 2022 {CEAS EuroGNC} conference},
     address   = {Berlin, Germany},
     month     = {may},
@@ -81,7 +81,7 @@ eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_05
 preview   ={ICAS_2022.png}
 }
 
-@INPROCEEDINGS{Autenrieb2019-re1,
+@inproceedings{Autenrieb2019-re1,
   author={Autenrieb, Johannes and Shin, Hyo-Sang and Bacic, Marko},
   booktitle={2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
   title={Development of a Neural Network-based Adaptive Nonlinear Dynamic Inversion Controller for a Tilt-wing VTOL Aircraft}, 
@@ -96,7 +96,7 @@ preview   ={ICAS_2022.png}
   preview   ={RED_UAS_2019_1.png}
   }
 
-  @INPROCEEDINGS{Autenrieb2019-re2,
+  @inproceedings{Autenrieb2019-re2,
   author      ={Autenrieb, Johannes and Strawa, Natalia and Shin, Hyo-Sang and Hong, Ju-Hyeon},
   booktitle   = {2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
   title       ={A Mission Planning and Task Allocation Framework For Multi-UAV Swarm Coordination}, 
