--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@ month       = {jan},
 chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2023-1997},
+selected={true},
 URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
 eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
 preview     = {SciTech_2023.png}
@@ -29,6 +30,7 @@ preview     = {SciTech_2023.png}
   keywords    = {Damping;Missiles;Uncertainty;Stability analysis;Real-time systems;Safety;Quadratic programming},
   doi         = {10.1109/CDC49753.2023.10383779},
   eprint      = {https://ieeexplore.ieee.org/document/10383779},
+  selected={true},
   preview     = {CDC_2023.gif}
   }
 
@@ -42,6 +44,7 @@ preview     = {SciTech_2023.png}
   month     = {apr},
   year      = {2024},
   doi       = {10.1007/s12567-024-00544-0},
+  selected={true},
   eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
   preview   = {CEAS_Space_2024.png}
 }
