--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,19 +3,34 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{Autenrieb2023-sj,
-  title     = {Flight control design for a hypersonic waverider configuration: A
-               non-linear model following control approach},
-  author    = {Autenrieb, Johannes and Fezans, Nicolas},
-  journal   = {CEAS Space Journal},
-  publisher = {Springer Science and Business Media LLC},
-  pages     = {1--24},
-  month     = {apr},
-  year      = {2024},
-  doi       = {10.1007/s12567-024-00544-0},
-  selected={true},
-  eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
-  preview   = {CEAS_Space_2024.png}
+@INPROCEEDINGS{Autenrieb2025-st1,
+author = {Autenrieb, Johannes and Fezans, Nicolas and Gruhn, Patrick},
+title       = {Leveraging Quasi-LPV Dynamic Models for Gain Scheduling Cascaded NDI-based Midcourse Attitude Controllers of Hypersonic Glide Vehicles (accepted)},
+booktitle   = {AIAA SCITECH 2025 Forum},
+year        = {2025},
+month       = {jan},
+chapter     = {},
+pages       = {},
+doi         = {},
+selected={true},
+URL         = {},
+eprint      = {},
+preview     = {}
+}
+
+@INPROCEEDINGS{Autenrieb2025-st2,
+author = {Autenrieb, Johannes and Gruhn, Patrick},
+title       = {An Iterative Dynamic Control Allocation Formulation for Hypersonic Vehicles with Asymmetrical Input Limitations on Magnitude and Rate (accepted)},
+booktitle   = {AIAA SCITECH 2025 Forum},
+year        = {2025},
+month       = {jan},
+chapter     = {},
+pages       = {},
+doi         = {},
+selected={true},
+URL         = {},
+eprint      = {},
+preview     = {}
 }
 
 @INPROCEEDINGS{Autenrieb2023-cd,
@@ -31,8 +46,23 @@
   doi         = {10.1109/CDC49753.2023.10383779},
   eprint      = {https://ieeexplore.ieee.org/document/10383779},
   selected={true},
-  preview     = {CDC_2023.gif}
+  preview     = {}
   }
+
+@article{Autenrieb2023-sj,
+  title     = {Flight control design for a hypersonic waverider configuration: A
+               non-linear model following control approach},
+  author    = {Autenrieb, Johannes and Fezans, Nicolas},
+  journal   = {CEAS Space Journal},
+  publisher = {Springer Science and Business Media LLC},
+  pages     = {1--24},
+  month     = {apr},
+  year      = {2024},
+  doi       = {10.1007/s12567-024-00544-0},
+  selected={true},
+  eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
+  preview   = {}
+}
 
 @INPROCEEDINGS{Autenrieb2023-st,
 author      = {Johannes Autenrieb},
@@ -46,20 +76,17 @@ doi         = {10.2514/6.2023-1997},
 selected={true},
 URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
 eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
-preview     = {SciTech_2023.png}
+preview     = {}
 }
 
-@inproceedings{Autenrieb2021-da,
-  title       = {Towards a {C}ontrol-{C}entric {M}odelling and
-                 {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
-  author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
-  booktitle   = {German Aeronautics and Space Congress (DLRK)},
-  institution = {DGLR},
-  address     = {Bremen, Germany},
-  month       = {sep},
-  year        = {2021},
-  eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
-  preview     = {DLRK_2021.png}
+@inproceedings{inproceedings,
+author = {Kiehn, Daniel and Autenrieb, Johannes and Fezans, Nicolas},
+year = {2022},
+month = {sep},
+pages = {},
+title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
+eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
+preview   ={}
 }
 
 @inproceedings{CEAS-GNC-2022-035,
@@ -71,17 +98,21 @@ preview     = {SciTech_2023.png}
     year      = {2022},
     note      = {CEAS-GNC-2022-035},
     eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
-    preview   ={EuroGNC_2022.png}
+    preview   ={}
 }
 
-@inproceedings{inproceedings,
-author = {Kiehn, Daniel and Autenrieb, Johannes and Fezans, Nicolas},
-year = {2022},
-month = {sep},
-pages = {},
-title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
-eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
-preview   ={ICAS_2022.png}
+@inproceedings{Autenrieb2021-da,
+  title       = {Towards a {C}ontrol-{C}entric {M}odelling and
+                 {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
+  author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
+  booktitle   = {German Aeronautics and Space Congress (DLRK)},
+  institution = {DGLR},
+  address     = {Bremen, Germany},
+  month       = {sep},
+  year        = {2021},
+  doi={10.25967/550235},
+  eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
+  preview     = {}
 }
 
 @inproceedings{Autenrieb2019-re1,
@@ -96,7 +127,7 @@ preview   ={ICAS_2022.png}
   keywords={},
   doi={10.1109/REDUAS47371.2019.8999700},
   eprint    = {https://ieeexplore.ieee.org/document/8999708},
-  preview   ={RED_UAS_2019_1.png}
+  preview   ={}
   }
 
   @inproceedings{Autenrieb2019-re2,
@@ -111,6 +142,6 @@ preview   ={ICAS_2022.png}
   keywords    ={},
   doi         ={10.1109/REDUAS47371.2019.8999708},
   eprint      = {https://ieeexplore.ieee.org/document/8999708},
-  preview     ={RED_UAS_2019_2.png},
+  preview     ={},
   additional_info={. *Code and more information* can be [found here](https://github.com/JohannesAutenrieb/mission_planning)}
   }
