--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -73,7 +73,7 @@ month       = {jan},
 chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2023-1997},
-selected={true},
+selected={false},
 URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
 eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
 preview     = {}
