--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,19 +33,22 @@ eprint      = {},
 preview     = {}
 }
 
-@article{Autenrieb2023-sj,
-  title     = {Flight control design for a hypersonic waverider configuration: A
-               non-linear model following control approach},
-  author    = {Autenrieb, Johannes and Fezans, Nicolas},
-  journal   = {CEAS Space Journal},
-  publisher = {Springer Science and Business Media LLC},
-  pages     = {1--24},
-  month     = {apr},
-  year      = {2024},
-  doi       = {10.1007/s12567-024-00544-0},
-  selected={true},
-  eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
-  preview   = {}
+@article{Autenrieb2024-sj,
+title     = {Flight control design for a hypersonic waverider configuration: A
+             non-linear model following control approach},
+author    = {Autenrieb, Johannes and Fezans, Nicolas},
+journal   = {CEAS Space Journal},
+publisher = {Springer Science and Business Media LLC},
+bibtex_show={true},
+dimensions={true},
+website={true},
+pages     = {1--24},
+month     = {apr},
+year      = {2024},
+doi       = {10.1007/s12567-024-00544-0},
+selected={true},
+eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
+preview   = {}
 }
 
 @INPROCEEDINGS{Autenrieb2023-cd,
@@ -54,6 +57,9 @@ booktitle   = {2023 62nd IEEE Conference on Decision and Control (CDC)},
 title       = {Safe and Stable Adaptive Control for a Class of Dynamic Systems}, 
 year        = {2023},
 month       = {dec},
+bibtex_show={true},
+dimensions={true},
+website={true},
 volume      = {},
 number      = {},
 pages       = {5059-5066},
@@ -70,9 +76,12 @@ title       = {Data fusion-based Incremental Nonlinear Model Following Control D
 booktitle   = {AIAA SCITECH 2023 Forum},
 year        = {2023},
 month       = {jan},
+bibtex_show={true},
+dimensions={true},
 chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2023-1997},
+website={true},
 selected={false},
 URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
 eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
@@ -83,6 +92,9 @@ preview     = {}
 author = {Kiehn, Daniel and Autenrieb, Johannes and Fezans, Nicolas},
 year = {2022},
 month = {sep},
+bibtex_show={true},
+dimensions={true},
+website={true},
 pages = {},
 title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
 eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
@@ -90,58 +102,70 @@ preview   ={}
 }
 
 @inproceedings{CEAS-GNC-2022-035,
-    title     = {Nonlinear Model Following Control Design for a Hypersonic Waverider Configuration},
-    author    = {Autenrieb, Johannes and Fezans, Nicolas},
-    booktitle = {Proceedings of the 2022 {CEAS EuroGNC} conference},
-    address   = {Berlin, Germany},
-    month     = {may},
-    year      = {2022},
-    note      = {CEAS-GNC-2022-035},
-    eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
-    preview   ={}
+title     = {Nonlinear Model Following Control Design for a Hypersonic Waverider Configuration},
+author    = {Autenrieb, Johannes and Fezans, Nicolas},
+booktitle = {Proceedings of the 2022 {CEAS EuroGNC} conference},
+address   = {Berlin, Germany},
+month     = {may},
+year      = {2022},
+bibtex_show={true},
+dimensions={true},
+website={true},
+note      = {CEAS-GNC-2022-035},
+eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
+preview   ={}
 }
 
 @inproceedings{Autenrieb2021-da,
-  title       = {Towards a {C}ontrol-{C}entric {M}odelling and
-                 {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
-  author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
-  booktitle   = {German Aeronautics and Space Congress (DLRK)},
-  institution = {DGLR},
-  address     = {Bremen, Germany},
-  month       = {sep},
-  year        = {2021},
-  doi={10.25967/550235},
-  eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
-  preview     = {}
+title       = {Towards a {C}ontrol-{C}entric {M}odelling and
+               {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
+author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
+booktitle   = {German Aeronautics and Space Congress (DLRK)},
+institution = {DGLR},
+address     = {Bremen, Germany},
+month       = {sep},
+bibtex_show={true},
+dimensions={true},
+website={true},
+year        = {2021},
+doi={10.25967/550235},
+eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
+preview     = {}
 }
 
 @inproceedings{Autenrieb2019-re1,
-  author={Autenrieb, Johannes and Shin, Hyo-Sang and Bacic, Marko},
-  booktitle={2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
-  title={Development of a Neural Network-based Adaptive Nonlinear Dynamic Inversion Controller for a Tilt-wing VTOL Aircraft}, 
-  year={2019},
-  month={nov},
-  volume={},
-  number={},
-  pages={44-52},
-  keywords={},
-  doi={10.1109/REDUAS47371.2019.8999700},
-  eprint    = {https://ieeexplore.ieee.org/document/8999708},
-  preview   ={}
+author={Autenrieb, Johannes and Shin, Hyo-Sang and Bacic, Marko},
+booktitle={2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
+title={Development of a Neural Network-based Adaptive Nonlinear Dynamic Inversion Controller for a Tilt-wing VTOL Aircraft}, 
+year={2019},
+month={nov},
+volume={},
+number={},
+bibtex_show={true},
+dimensions={true},
+website={true},
+pages={44-52},
+keywords={},
+doi={10.1109/REDUAS47371.2019.8999700},
+eprint    = {https://ieeexplore.ieee.org/document/8999708},
+preview   ={}
   }
 
   @inproceedings{Autenrieb2019-re2,
-  author      ={Autenrieb, Johannes and Strawa, Natalia and Shin, Hyo-Sang and Hong, Ju-Hyeon},
-  booktitle   = {2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
-  title       ={A Mission Planning and Task Allocation Framework For Multi-UAV Swarm Coordination}, 
-  year        ={2019},
-  month       = {dec},
-  volume      ={nov},
-  number      ={},
-  pages       ={297-304},
-  keywords    ={},
-  doi         ={10.1109/REDUAS47371.2019.8999708},
-  eprint      = {https://ieeexplore.ieee.org/document/8999708},
-  preview     ={},
-  additional_info={. *Code and more information* can be [found here](https://github.com/JohannesAutenrieb/mission_planning)}
+author      ={Autenrieb, Johannes and Strawa, Natalia and Shin, Hyo-Sang and Hong, Ju-Hyeon},
+booktitle   = {2019 Workshop on Research, Education and Development of Unmanned Aerial Systems (RED UAS)}, 
+title       ={A Mission Planning and Task Allocation Framework For Multi-UAV Swarm Coordination}, 
+year        ={2019},
+month       = {dec},
+volume      ={nov},
+bibtex_show={true},
+dimensions={true},
+website={true},
+number      ={},
+pages       ={297-304},
+keywords    ={},
+doi         ={10.1109/REDUAS47371.2019.8999708},
+eprint      = {https://ieeexplore.ieee.org/document/8999708},
+preview     ={},
+additional_info={. *Code and more information* can be [found here](https://github.com/JohannesAutenrieb/mission_planning)}
   }
