--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -40,8 +40,7 @@ author    = {Autenrieb, Johannes and Fezans, Nicolas},
 journal   = {CEAS Space Journal},
 publisher = {Springer Science and Business Media LLC},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
 pages     = {1--24},
 month     = {apr},
 year      = {2024},
@@ -58,8 +57,7 @@ title       = {Safe and Stable Adaptive Control for a Class of Dynamic Systems},
 year        = {2023},
 month       = {dec},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html      = {https://ieeexplore.ieee.org/document/10383779},
 volume      = {},
 number      = {},
 pages       = {5059-5066},
@@ -77,11 +75,10 @@ booktitle   = {AIAA SCITECH 2023 Forum},
 year        = {2023},
 month       = {jan},
 bibtex_show={true},
-dimensions={true},
 chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2023-1997},
-website={true},
+html      = {https://ieeexplore.ieee.org/document/10383779},
 selected={false},
 URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
 eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
@@ -93,8 +90,7 @@ author = {Kiehn, Daniel and Autenrieb, Johannes and Fezans, Nicolas},
 year = {2022},
 month = {sep},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
 pages = {},
 title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
 eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
@@ -109,8 +105,7 @@ address   = {Berlin, Germany},
 month     = {may},
 year      = {2022},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
 note      = {CEAS-GNC-2022-035},
 eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
 preview   ={}
@@ -125,8 +120,7 @@ institution = {DGLR},
 address     = {Bremen, Germany},
 month       = {sep},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
 year        = {2021},
 doi={10.25967/550235},
 eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
@@ -142,8 +136,7 @@ month={nov},
 volume={},
 number={},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html    = {https://ieeexplore.ieee.org/document/8999708},
 pages={44-52},
 keywords={},
 doi={10.1109/REDUAS47371.2019.8999700},
@@ -159,8 +152,7 @@ year        ={2019},
 month       = {dec},
 volume      ={nov},
 bibtex_show={true},
-dimensions={true},
-website={true},
+html      = {https://ieeexplore.ieee.org/document/8999708},
 number      ={},
 pages       ={297-304},
 keywords    ={},
