--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
 author = {Autenrieb, Johannes and Fezans, Nicolas and Gruhn, Patrick},
 title       = {Leveraging Quasi-LPV Dynamic Models for Gain Scheduling Cascaded NDI-based Midcourse Attitude Controllers of Hypersonic Glide Vehicles (accepted)},
 booktitle   = {AIAA SCITECH 2025 Forum},
+abbr={Conference},
 year        = {2025},
 month       = {jan},
 chapter     = {},
@@ -24,6 +25,7 @@ title       = {An Iterative Dynamic Control Allocation Formulation for Hypersoni
 booktitle   = {AIAA SCITECH 2025 Forum},
 year        = {2025},
 month       = {jan},
+abbr={Conference},
 chapter     = {},
 pages       = {},
 doi         = {},
@@ -40,6 +42,7 @@ author    = {Autenrieb, Johannes and Fezans, Nicolas},
 journal   = {CEAS Space Journal},
 publisher = {Springer Science and Business Media LLC},
 bibtex_show={true},
+abbr={Journal},
 html    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
 pages     = {1--24},
 month     = {apr},
@@ -58,6 +61,7 @@ year        = {2023},
 month       = {dec},
 bibtex_show={true},
 html      = {https://ieeexplore.ieee.org/document/10383779},
+abbr={Conference},
 volume      = {},
 number      = {},
 pages       = {5059-5066},
@@ -75,6 +79,7 @@ booktitle   = {AIAA SCITECH 2023 Forum},
 year        = {2023},
 month       = {jan},
 bibtex_show={true},
+abbr={Conference},
 chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2023-1997},
@@ -92,6 +97,7 @@ month = {sep},
 bibtex_show={true},
 html    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
 pages = {},
+abbr={Conference},
 title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
 eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
 preview   ={}
@@ -105,6 +111,7 @@ address   = {Berlin, Germany},
 month     = {may},
 year      = {2022},
 bibtex_show={true},
+abbr={Conference},
 html    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
 note      = {CEAS-GNC-2022-035},
 eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
@@ -122,6 +129,7 @@ month       = {sep},
 bibtex_show={true},
 html      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
 year        = {2021},
+abbr={Conference},
 doi={10.25967/550235},
 eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
 preview     = {}
@@ -139,6 +147,7 @@ bibtex_show={true},
 html    = {https://ieeexplore.ieee.org/document/8999708},
 pages={44-52},
 keywords={},
+abbr={Conference},
 doi={10.1109/REDUAS47371.2019.8999700},
 eprint    = {https://ieeexplore.ieee.org/document/8999708},
 preview   ={}
@@ -154,6 +163,7 @@ volume      ={nov},
 bibtex_show={true},
 html      = {https://ieeexplore.ieee.org/document/8999708},
 number      ={},
+abbr={Conference},
 pages       ={297-304},
 keywords    ={},
 doi         ={10.1109/REDUAS47371.2019.8999708},
