--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
 author = {Autenrieb, Johannes and Fezans, Nicolas and Gruhn, Patrick},
 title       = {Leveraging Quasi-LPV Dynamic Models for Gain Scheduling Cascaded NDI-based Midcourse Attitude Controllers of Hypersonic Glide Vehicles (accepted)},
 booktitle   = {AIAA SCITECH 2025 Forum},
-abbr={conf},
+abbr=conf,
 year        = {2025},
 month       = {jan},
 chapter     = {},
@@ -27,7 +27,7 @@ title       = {An Iterative Dynamic Control Allocation Formulation for Hypersoni
 booktitle   = {AIAA SCITECH 2025 Forum},
 year        = {2025},
 month       = {jan},
-abbr={conf},
+abbr=conf,
 chapter     = {},
 pages       = {},
 doi         = {},
@@ -44,7 +44,7 @@ author    = {Autenrieb, Johannes and Fezans, Nicolas},
 journal   = {CEAS Space Journal},
 publisher = {Springer Science and Business Media LLC},
 bibtex_show={true},
-abbr={jour},
+abbr=jour,
 html    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
 pages     = {1--24},
 month     = {apr},
@@ -63,7 +63,7 @@ year        = {2023},
 month       = {dec},
 bibtex_show={true},
 html      = {https://ieeexplore.ieee.org/document/10383779},
-abbr={conf},
+abbr=conf,
 volume      = {},
 number      = {},
 pages       = {5059-5066},
@@ -81,7 +81,7 @@ booktitle   = {AIAA SCITECH 2023 Forum},
 year        = {2023},
 month       = {jan},
 bibtex_show={true},
-abbr={conf},
+abbr=conf,
 chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2023-1997},
@@ -99,7 +99,7 @@ month = {sep},
 bibtex_show={true},
 html    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
 pages = {},
-abbr={conf},
+abbr=conf,
 title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
 eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
 preview   ={}
@@ -113,7 +113,7 @@ address   = {Berlin, Germany},
 month     = {may},
 year      = {2022},
 bibtex_show={true},
-abbr={conf},
+abbr=conf,
 html    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
 note      = {CEAS-GNC-2022-035},
 eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
@@ -131,7 +131,7 @@ month       = {sep},
 bibtex_show={true},
 html      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
 year        = {2021},
-abbr={conf},
+abbr=conf,
 doi={10.25967/550235},
 eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
 preview     = {}
@@ -149,7 +149,7 @@ bibtex_show={true},
 html    = {https://ieeexplore.ieee.org/document/8999708},
 pages={44-52},
 keywords={},
-abbr={conf},
+abbr=conf,
 doi={10.1109/REDUAS47371.2019.8999700},
 eprint    = {https://ieeexplore.ieee.org/document/8999708},
 preview   ={}
@@ -165,7 +165,7 @@ volume      ={nov},
 bibtex_show={true},
 html      = {https://ieeexplore.ieee.org/document/8999708},
 number      ={},
-abbr={conf},
+abbr=conf,
 pages       ={297-304},
 keywords    ={},
 doi         ={10.1109/REDUAS47371.2019.8999708},
