--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,13 +12,7 @@ booktitle   = {AIAA SCITECH 2025 Forum},
 abbr=conf,
 year        = {2025},
 month       = {jan},
-chapter     = {},
-pages       = {},
-doi         = {},
-selected={true},
-URL         = {},
-eprint      = {},
-preview     = {}
+selected={true}
 }
 
 @INPROCEEDINGS{Autenrieb2025-st2,
@@ -28,13 +22,7 @@ booktitle   = {AIAA SCITECH 2025 Forum},
 year        = {2025},
 month       = {jan},
 abbr=conf,
-chapter     = {},
-pages       = {},
-doi         = {},
-selected={true},
-URL         = {},
-eprint      = {},
-preview     = {}
+selected={true}
 }
 
 @article{Autenrieb2024-sj,
