--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -111,7 +111,7 @@ preview   ={}
 @inproceedings{Autenrieb2021-da,
 title       = {Towards a {C}ontrol-{C}entric {M}odelling and
                {S}imulation-{F}ramework for {H}ypersonic {G}lide {V}ehicles},
-author      = {Autenrieb, J and Fezans, N and Gruhn, P and Klevanski, J},
+author      = {Autenrieb, Johannes and Fezans, Nicolas and Gruhn, Patrick and Klevanski, Josef},
 booktitle   = {German Aeronautics and Space Congress (DLRK)},
 institution = {DGLR},
 address     = {Bremen, Germany},
