--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,25 +4,20 @@
 @string{aps = {American Physical Society,}}
 @string{conf={Conference}}
 @string{jour={Journal}}
+@string{pre={pre-print}}
 
-@INPROCEEDINGS{Autenrieb2025-st1,
-author = {Autenrieb, Johannes and Fezans, Nicolas and Gruhn, Patrick},
-title       = {Leveraging Quasi-LPV Dynamic Models for Gain Scheduling Cascaded NDI-based Midcourse Attitude Controllers of Hypersonic Glide Vehicles (accepted)},
-booktitle   = {AIAA SCITECH 2025 Forum},
-abbr=conf,
-year        = {2025},
-month       = {jan},
-selected={true}
-}
-
-@INPROCEEDINGS{Autenrieb2025-st2,
-author = {Autenrieb, Johannes and Gruhn, Patrick},
-title       = {An Iterative Dynamic Control Allocation Formulation for Hypersonic Vehicles with Asymmetrical Input Limitations on Magnitude and Rate (accepted)},
-booktitle   = {AIAA SCITECH 2025 Forum},
-year        = {2025},
-month       = {jan},
-abbr=conf,
-selected={true}
+@misc{autenrieb2024-ax,
+      title={Sensor-Based Safety-Critical Control using an Incremental Control Barrier Function Formulation via Reduced-Order Approximate Models}, 
+      author={Johannes Autenrieb and Hyo-Sang Shin},
+      year={2024},
+      eprint={2410.08096},
+      bibtex_show={true},
+      archivePrefix={arXiv},
+      primaryClass={eess.SY},
+      abbr=pre,
+      html= {https://arxiv.org/abs/2410.08096},
+      eprint ={https://arxiv.org/pdf/2410.08096},
+      selected={true}
 }
 
 @article{Autenrieb2024-sj,
