--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,22 +1,17 @@
----
----
-
 @string{conf={Conference}}
 @string{jour={Journal}}
-@string{pre={pre-print}}
+@string{pre={Pre-print}}
 
-@misc{autenrieb2024-ax,
-      title={Sensor-Based Safety-Critical Control using an Incremental Control Barrier Function Formulation via Reduced-Order Approximate Models}, 
-      author={Johannes Autenrieb and Hyo-Sang Shin},
-      year={2024},
-      eprint={2410.08096},
-      bibtex_show={true},
-      archivePrefix={arXiv},
-      primaryClass={eess.SY},
-      abbr=pre,
-      html= {https://arxiv.org/abs/2410.08096},
-      eprint ={https://arxiv.org/pdf/2410.08096},
-      selected={true}
+@article{autenrieb2024-ax,
+  title={Sensor-Based Safety-Critical Control using an Incremental Control Barrier Function Formulation via Reduced-Order Approximate Models}, 
+  author={Johannes Autenrieb and Hyo-Sang Shin},
+  journal={arXiv:2410.08096 [eess.SY]},
+  year={2024},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2410.08096},
+  url= {https://arxiv.org/abs/2410.08096},
+  selected={true}
 }
 
 @article{Autenrieb2024-sj,
