--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   author={Johannes Autenrieb and Hyo-Sang Shin},
   journal={arXiv:2410.08096 [eess.SY]},
   year={2024},
+  month     = {oct},
   abbr=pre,
   bibtex_show={true},
   arxiv={2410.08096},
@@ -15,8 +16,7 @@
 }
 
 @article{Autenrieb2024-sj,
-title     = {Flight control design for a hypersonic waverider configuration: A
-             non-linear model following control approach},
+title     = {Flight control design for a hypersonic waverider configuration: A non-linear model following control approach},
 author    = {Autenrieb, Johannes and Fezans, Nicolas},
 journal   = {CEAS Space Journal},
 publisher = {Springer Science and Business Media LLC},
