--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,6 +29,7 @@ year      = {2024},
 doi       = {10.1007/s12567-024-00544-0},
 selected={true},
 eprint    = {https://link.springer.com/article/10.1007/s12567-024-00544-0},
+url= {https://link.springer.com/article/10.1007/s12567-024-00544-0},
 preview   = {}
 }
 
@@ -47,6 +48,7 @@ pages       = {5059-5066},
 keywords    = {Damping;Missiles;Uncertainty;Stability analysis;Real-time systems;Safety;Quadratic programming},
 doi         = {10.1109/CDC49753.2023.10383779},
 eprint      = {https://ieeexplore.ieee.org/document/10383779},
+url= {https://ieeexplore.ieee.org/document/10383779},
 selected={true},
 preview     = {}
 }
@@ -64,7 +66,7 @@ pages       = {},
 doi         = {10.2514/6.2023-1997},
 html      = {https://ieeexplore.ieee.org/document/10383779},
 selected={false},
-URL         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
+url         = {https://arc.aiaa.org/doi/abs/10.2514/6.2023-1997},
 eprint      = {https://arc.aiaa.org/doi/pdf/10.2514/6.2023-1997},
 preview     = {}
 }
@@ -79,6 +81,7 @@ pages = {},
 abbr=conf,
 title = {COAST - A Simulation and Control Framework to Support Multidisciplinary Optimization and Aircraft Design with CPACS},
 eprint    = {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
+url= {https://www.icas.org/ICAS_ARCHIVE/ICAS2022/data/preview/ICAS2022_0505.htm},
 preview   ={}
 }
 
@@ -94,6 +97,7 @@ abbr=conf,
 html    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
 note      = {CEAS-GNC-2022-035},
 eprint    = {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
+url= {https://eurognc.ceas.org/archive/EuroGNC2022/html/CEAS-GNC-2022-035.html},
 preview   ={}
 }
 
@@ -111,6 +115,7 @@ year        = {2021},
 abbr=conf,
 doi={10.25967/550235},
 eprint      = {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
+url= {https://publikationen.dglr.de/?tx_dglrpublications_pi1%5bdocument_id%5d=550235},
 preview     = {}
 }
 
@@ -129,6 +134,7 @@ keywords={},
 abbr=conf,
 doi={10.1109/REDUAS47371.2019.8999700},
 eprint    = {https://ieeexplore.ieee.org/document/8999708},
+url= {https://ieeexplore.ieee.org/document/8999708},
 preview   ={}
   }
 
@@ -147,6 +153,7 @@ pages       ={297-304},
 keywords    ={},
 doi         ={10.1109/REDUAS47371.2019.8999708},
 eprint      = {https://ieeexplore.ieee.org/document/8999708},
+url      = {https://ieeexplore.ieee.org/document/8999708},
 preview     ={},
 additional_info={. *Code and more information* can be [found here](https://github.com/JohannesAutenrieb/mission_planning)}
   }
