--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 @string{jour={Journal}}
 @string{pre={Pre-print}}
 
-@article{autenrieb2024-ax,
+@misc{autenrieb2024-ax,
   title={Sensor-Based Safety-Critical Control using an Incremental Control Barrier Function Formulation via Reduced-Order Approximate Models}, 
   author={Johannes Autenrieb and Hyo-Sang Shin},
   journal={arXiv:2410.08096 [eess.SY]},
